[tool.poetry]
name = "project-2-hangman-2"
version = "0.1.0"
description = ""
authors = ["Prosper1kwo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
art = "^5.3"
colorama = "^0.4.4"
replit = "^3.2.4"
replit-play = "^0.0.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
